tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__result__test__emit_result_codegen@pre-mem2reg@llvm21_1.snap
---
source: tket-qsystem/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@res_test_bool.427F8271.0 = private constant [20 x i8] c"\13USER:BOOL:test_bool"

define private void @_hl.main.1(i1 %0) {
alloca_block:
  %"2_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, ptr %"2_0", align 1
  %"2_01" = load i1, ptr %"2_0", align 1
  %tag_len = load i8, ptr @res_test_bool.427F8271.0, align 1
  %tag_len2 = zext i8 %tag_len to i64
  call void @print_bool(ptr @res_test_bool.427F8271.0, i64 %tag_len2, i1 %"2_01")
  ret void
}

declare void @print_bool(ptr, i64, i1)
