tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__result__test__emit_result_codegen@pre-mem2reg@llvm21_4.snap
---
source: tket-qsystem/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@res_test_f64.A24BDAE1.0 = private constant [20 x i8] c"\13USER:FLOAT:test_f64"

define private void @_hl.main.1(double %0) {
alloca_block:
  %"2_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, ptr %"2_0", align 8
  %"2_01" = load double, ptr %"2_0", align 8
  %tag_len = load i8, ptr @res_test_f64.A24BDAE1.0, align 1
  %tag_len2 = zext i8 %tag_len to i64
  call void @print_float(ptr @res_test_f64.A24BDAE1.0, i64 %tag_len2, double %"2_01")
  ret void
}

declare void @print_float(ptr, i64, double)
